# bias-ext-realtime

./: extension.json  pyproject.toml
bias_ext_realtime.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
bias_ext_realtime/backend/: admin_api.py  apps.py  constants.py  consumers.py  ext.py  extenders.py  frontend.py  listener_contracts.py  notification_dispatch.py  realtime_contracts.py  settings_contracts.py  tests.py  websocket_contracts.py  websocket_service.py
frontend/admin/: index.js
frontend/forum/: forumRealtime.js  forumRealtimeStore.js  index.js  nodeSdk.js  realtimeFrontendRegistry.js  sdk.d.ts  sdk.js
tests/: test_runtime_facade_imports.py
