[project]
name = "bias-ext-realtime"
version = "0.1.0"
description = "Bias realtime Extension"
requires-python = ">=3.11"
dependencies = ["bias-core>=0.1,<0.2"]
[project.entry-points."bias.extensions"]
realtime = "bias_ext_realtime.backend.ext:extend"
[tool.setuptools.packages.find]
where = ["."]
include = ["bias_ext_realtime*"]
